# CameraTracker

./: .gitignore  CMakeLists.txt  example.cpp  gpx_reader.h  main.cpp  readme.md
